added transitions to login page and a nav bar and an image

--- a/index/index.html
+++ b/index/index.html
@@ -11,18 +11,19 @@
 </head>
 
 <body>
-    <!-- Navbar Start -->
-    <nav class="navbar">
-        <div class="nav-left">
-            <!-- <img src="https://img.icons8.com/fluency/28/download--v1.png" alt="Logo" class="logo-icon" /> -->
-            <span class="logo-text">Reel-Fetch</span>
-        </div>
-        <!-- Hamburger Icon -->
-        <div class="hamburger" onclick="toggleMenu()">
-            &#9776;
-        </div>
+    <header>
+        <!-- Navbar Start -->
+        <nav class="navbar">
+            <div class="nav-left">
+                <!-- <img src="https://img.icons8.com/fluency/28/download--v1.png" alt="Logo" class="logo-icon" /> -->
+                <span class="logo-text">Reel-Fetch</span>
+            </div>
+            <!-- Hamburger Icon -->
+            <div class="hamburger" onclick="toggleMenu()">
+                &#9776;
+            </div>
 
-       
+
             <ul class="nav-middle" id="navMenu">
                 <li><a href="">Platforms</a></li>
                 <li><a href="">Features</a></li>
@@ -34,9 +35,10 @@
                 <button class="login-btn">Login</button>
                 <button class="create-btn">Create account</button>
             </div>
-        
-    </nav>
-    <!-- Navbar End -->
+
+        </nav>
+        <!-- Navbar End -->
+    </header>
 
 
 </body>
