--- a/login-page/login.html
+++ b/login-page/login.html
@@ -10,62 +10,100 @@
 </head>
 
 <body>
-    <div class="container">
-        <!-- login box -->
-        <div class="form-box-login">
-            <form action="">
-                <h1>Welcome back!</h1>
-                <div class="input-box">
-                    <input type="text" placeholder="Username" required>
-                    <i class='bx bxs-user'></i>
-                </div>
-                <div class="input-box">
-                    <input type="password" placeholder="password" required>
-                    <i class='bx bxs-lock-alt'></i>
-                </div>
-                <div class="forgot-link">
-                    <a href="#">Forgot Password?</a>
-                </div>
-                <button type="submit" class="btn">Login</button>
-                <p>or Login with social platforms</p>
-                <div class="social-icons">
-                    <a href="#"><i class='bx bxl-google'></i></a>
-                    <a href="#"><i class='bx bxl-facebook'></i></a>
-                    <a href="#"><i class='bx bxl-github'></i></a>
-                    <a href="#"><i class='bx bxl-linkedin'></i></a>
-                </div>
-                <div class="shift"><p>Don't have a account yet? <a href="#">Signup now</a></p></div>
-            </form>
-        </div>
-        <!-- registration -->
-        <div class="form-box-register">
-            <form action="">
-                <h1>Sign-up</h1>
-                <div class="input-box">
-                    <input type="text" placeholder="Username" required>
-                    <i class='bx bxs-user'></i>
-                </div>
-                <div class="input-box">
-                    <input type="text" placeholder="Email" required>
-                    <i class='bx bxs-envelope'></i>
-                </div>
-                <div class="input-box">
-                    <input type="password" placeholder="password" required>
-                    <i class='bx bxs-lock-alt'></i>
-                </div>
-                <button type="submit" class="btn">Register</button>
-                <p>or Register with social platforms</p>
-                <div class="social-icons">
-                    <a href="#"><i class='bx bxl-google'></i></a>
-                    <a href="#"><i class='bx bxl-facebook'></i></a>
-                    <a href="#"><i class='bx bxl-github'></i></a>
-                    <a href="#"><i class='bx bxl-linkedin'></i></a>
-                </div>
-                <div class="shift"><p>Already registered? <a href="#">Sign-in now</a></p></div>
+    <header>
+        <!-- Navbar Start -->
+        <nav class="navbar">
+            <div class="nav-left">
+                <!-- <img src="https://img.icons8.com/fluency/28/download--v1.png" alt="Logo" class="logo-icon" /> -->
+                <span class="logo-text">Reel-Fetch</span>
+            </div>
+            <!-- Hamburger Icon -->
+            <div class="hamburger" onclick="toggleMenu()">
+                &#9776;
+            </div>
 
-            </form>
+
+            <ul class="nav-middle" id="navMenu">
+                <li><a href="">Platforms</a></li>
+                <li><a href="">Features</a></li>
+                <li><a href="">Help</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+
+            <div class="nav-right" id="navBtns">
+                <button class="login-btn">Login</button>
+                <button class="create-btn">Create account</button>
+            </div>
+
+        </nav>
+        <!-- Navbar End -->
+    </header>
+
+    <main>
+        <div class="main">
+            <div class="container">
+                <!-- login box -->
+                <div class="form-box-login">
+                    <form action="">
+                        <h1>Welcome back!</h1>
+                        <div class="input-box">
+                            <input type="text" placeholder="Username" required>
+                            <i class='bx bxs-user'></i>
+                        </div>
+                        <div class="input-box">
+                            <input type="password" placeholder="password" required>
+                            <i class='bx bxs-lock-alt'></i>
+                        </div>
+                        <div class="forgot-link">
+                            <a href="#">Forgot Password?</a>
+                        </div>
+                        <button type="submit" class="btn">Login</button>
+                        <p>or Login with social platforms</p>
+                        <div class="social-icons">
+                            <a href="#"><i class='bx bxl-google'></i></a>
+                            <a href="#"><i class='bx bxl-facebook'></i></a>
+                            <a href="#"><i class='bx bxl-github'></i></a>
+                            <a href="#"><i class='bx bxl-linkedin'></i></a>
+                        </div>
+                        <div class="shift">
+                            <p>Don't have a account yet? <a href="#" id="show_register">Signup now</a></p>
+                        </div>
+                    </form>
+                </div>
+                <!-- registration -->
+                <div class="form-box-register">
+                    <form action="">
+                        <h1>Sign-up</h1>
+                        <div class="input-box">
+                            <input type="text" placeholder="Username" required>
+                            <i class='bx bxs-user'></i>
+                        </div>
+                        <div class="input-box">
+                            <input type="text" placeholder="Email" required>
+                            <i class='bx bxs-envelope'></i>
+                        </div>
+                        <div class="input-box">
+                            <input type="password" placeholder="password" required>
+                            <i class='bx bxs-lock-alt'></i>
+                        </div>
+                        <button type="submit" class="btn">Register</button>
+                        <p>or Register with social platforms</p>
+                        <div class="social-icons">
+                            <a href="#"><i class='bx bxl-google'></i></a>
+                            <a href="#"><i class='bx bxl-facebook'></i></a>
+                            <a href="#"><i class='bx bxl-github'></i></a>
+                            <a href="#"><i class='bx bxl-linkedin'></i></a>
+                        </div>
+                        <div class="shift">
+                            <p>Already registered? <a href="#" id="show_Login">Sign-in now</a></p>
+                        </div>
+
+                    </form>
+                </div>
+                <div class="image"></div>
+            </div>
         </div>
-    </div>
+    </main>
     <script src="login.js"></script>
 
 
