login page basic frontend is completed

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
                 <li><a href="">Help</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
+            
 
             <div class="nav-right" id="navBtns">
-                <button class="login-btn">Login</button>
-                <button class="create-btn">Create account</button>
+                <button class="login-btn"><a href="login.html">Login</a></button>
+                <button class="create-btn"><a href="login.html?mode=register">Create account</a></button>
             </div>
 
         </nav>
