--- a/login.html
+++ b/login.html
@@ -31,8 +31,8 @@
             </ul>
 
             <div class="nav-right" id="navBtns">
-                <button class="login-btn">Login</button>
-                <button class="create-btn">Create account</button>
+                <button class="login-btn"><a href="login.html">Login</a></button>
+                <button class="create-btn"><a href="login.html?mode=register">Create account</a></button>
             </div>
 
         </nav>
@@ -100,7 +100,8 @@
 
                     </form>
                 </div>
-                <div class="image"></div>
+                <div class="image1"></div>
+                <div class="image2"></div>
             </div>
         </div>
     </main>
