--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <div class="nav-left">
                 <!-- <img src="https://img.icons8.com/fluency/28/download--v1.png" alt="Logo" class="logo-icon" /> -->
-                <span class="logo-text">Reel-Fetch</span>
+                <span class="logo-text"><a href="index.html">Reel-Fetch</a></span>
             </div>
             <!-- Hamburger Icon -->
             <div class="hamburger" onclick="toggleMenu()">
