just some minimal changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <button class="download-btn">Download</button>
                 <div class="more-options">
                     <div class="more-header" onclick="toggleDropdown()">
-                        More options<i class="fa-sharp fa-thin fa-caret-down"></i>
+                        <p>More Options</p>
+                        <i class="fa-solid fa-caret-down"></i>
                     </div>
                     <div class="format-list" id="formatList">
                         <label><input type="radio" name="format" value="mp4" checked> MP4 (Video)</label>
