--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
 </head>
 
@@ -49,7 +49,7 @@
             <p class="subtext">No signup, no limits. Just paste the link and go.</p>
         </section>
         <section class="download-box">
-            <form action="" class="input-group" onsubmit="hnadleDownload(event)">
+            <form action="" class="input-group" onsubmit="handleDownload(event)">
                 <input type="text" placeholder="🔗 Paste video link here..." class="link-input" required>
                 <button class="download-btn" type="submit">Download</button>
             </form>
