type writter effect to the heading

--- a/login.html
+++ b/login.html
@@ -105,7 +105,7 @@
             </div>
         </div>
     </main>
-    <script src="login.js"></script>
+    <script src="logic\login.js"></script>
 
 
 </body>
